<resources>
    <string name="app_name">CovidVaccine</string>
    <string name="register_text">New user ? <u>Register</u></string>
    <string name="already_have_an_account_login">Already have an account? <u>Login</u></string>
    <string name="first_name">First name :</string>
    <string name="enter_usename">Enter usename</string>
    <string name="username">Username :</string>
    <string name="register">REGISTER</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="last_name">Last Name :</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="password">Password :</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password :</string>
    <string name="confirm_password2">Confirm password</string>
    <string name="email_address">Email address :</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="phone_number">Phone number :</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="aadharcard_no">Aadharcard No. :</string>
    <string name="enter_aadharcard_no">Enter Aadharcard No.</string>
    <string name="date_of_birth">Date of birth :</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register2">Register</string>
    <string name="enter_phone_number_login">Enter phone number</string>
    <string name="et_phone_no">Phone No. :</string>
    <string name="et_password">Password :</string>
    <string name="hnt_enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="datepicker">datePicker</string>
    <string name="gender">Gender :</string>
    <string name="vaccination_center_list">Vaccination Center List</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="city">City :</string>
    <string name="area">Area :</string>
    <string name="enter_area">Enter area</string>
    <string name="address">Address :</string>
    <string name="enter_address">Enter address</string>
    <string name="date">Date :</string>
    <string name="enter_date">Enter date</string>
    <string name="time">Time :</string>
    <string name="enter_time_10am_to_4pm">Enter time (10am to 4pm)</string>
    <string name="add">Add</string>
    <string name="center">Center :</string>
    <string name="enter_name_of_the_center">Enter name of the center</string>
    <string name="confirmation">Confirmation</string>
</resources>