<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_green_blue"
    android:layout_gravity="center"
    tools:context=".register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30sp"
        app:cardElevation="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/my_background"
            android:padding="30sp">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/dark_blue"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_reg_Fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_reg_Fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10sp"
                android:ems="15"
                android:textSize="18sp"
                android:hint="@string/enter_first_name"
                android:textColorHint="@color/medium_gray"
                android:inputType="textPersonName"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_reg_Lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_reg_Lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10sp"
                android:ems="15"
                android:hint="@string/enter_last_name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textColorHint="@color/medium_gray"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_reg_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_reg_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10sp"
                android:ems="15"
                android:hint="@string/enter_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textColorHint="@color/medium_gray"
                android:inputType="textPersonName|textPassword" />

            <TextView
                android:id="@+id/tv_reg_conf_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_reg_conf_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10sp"
                android:ems="15"
                android:hint="@string/confirm_password2"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textColorHint="@color/medium_gray"
                android:inputType="textPersonName|textPassword" />

            <TextView
                android:id="@+id/tv_reg_email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_reg_email_addresss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10sp"
                android:ems="15"
                android:hint="@string/enter_email_address"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textColorHint="@color/medium_gray"
                android:inputType="textPostalAddress" />


            <TextView
                android:id="@+id/tv_reg_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_reg_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10sp"
                android:ems="15"
                android:hint="@string/enter_phone_number"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textColorHint="@color/medium_gray"
                android:inputType="phone"/>

            <TextView
                android:id="@+id/tv_reg_aadhar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/aadharcard_no"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_reg_aadhar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/aadhar"
                android:drawablePadding="10sp"
                android:ems="15"
                android:hint="@string/enter_aadharcard_no"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textColorHint="@color/medium_gray"
                android:inputType="phone" />

            <TextView
                android:id="@+id/tv_reg_DOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_reg_DOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/calendar"
                android:drawablePadding="10sp"
                android:ems="15"
                android:hint="@string/enter_date_of_birth"
                android:onClick="showDatePicker"
                android:textColor="@color/black"
                android:textColorHint="@color/medium_gray"
                android:textSize="18sp"
                android:focusable="false"/>

            <TextView
                android:id="@+id/tv_reg_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="Gender :"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <RadioGroup
                android:id="@+id/rg_reg_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rb_reg_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/boy"
                    android:text="@string/male"
                    android:paddingRight="20sp"
                    android:onClick="onRadioButtonClicked"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    />

                <RadioButton
                    android:id="@+id/rb_reg_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/girl"
                    android:text="@string/female"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:onClick="onRadioButtonClicked"
                     />
            </RadioGroup>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:foregroundGravity="center_horizontal"
                android:text="@string/register2"
                android:onClick="regi"
                android:textSize="25sp"
                android:textColor="@color/white"
                app:backgroundTint="@color/light_blue" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="goLogin"
                android:focusable="true"
                android:linksClickable="true"
                android:text="@string/already_have_an_account_login"
                android:textColor="@color/light_blue"
                android:textSize="20sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>