<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_green_blue"
    android:layout_gravity="center"
    tools:context=".add_new_slot">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20sp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30sp"
                app:cardElevation="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@color/my_background"
                    android:padding="30sp">

                    <TextView
                        android:id="@+id/tv_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add center/slot"
                        android:textColor="@color/dark_blue"
                        android:layout_gravity="center"
                        android:textSize="40sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tv_ct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="@string/city"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_ct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7sp"
                        android:drawablePadding="10sp"
                        android:ems="15"
                        android:textSize="18sp"
                        android:hint="@string/enter_city_name"
                        android:textColorHint="@color/medium_gray"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/tv_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="@string/area"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7sp"
                        android:drawablePadding="10sp"
                        android:ems="15"
                        android:hint="@string/enter_area"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/medium_gray"
                        android:inputType="text" />
                    <TextView
                        android:id="@+id/tv_center_nm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="@string/center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_center_nm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7sp"
                        android:drawablePadding="10sp"
                        android:ems="15"
                        android:hint="@string/enter_name_of_the_center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textColorHint="@color/medium_gray"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7sp"
                        android:drawablePadding="10sp"
                        android:ems="15"
                        android:hint="@string/enter_address"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textColorHint="@color/medium_gray"
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="@string/date"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7sp"
                        android:drawablePadding="10sp"
                        android:ems="15"
                        android:hint="@string/enter_date"
                        android:onClick="showDatePicker"
                        android:textColor="@color/black"
                        android:textColorHint="@color/medium_gray"
                        android:textSize="18sp"
                        android:focusable="false"/>

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="@string/time"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7sp"
                        android:drawablePadding="10sp"
                        android:ems="15"
                        android:hint="@string/enter_time_10am_to_4pm"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textColorHint="@color/medium_gray"
                        android:inputType="text" />




                    <Button
                        android:id="@+id/btn_addSlot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="16sp"
                        android:foregroundGravity="center_horizontal"
                        android:text="@string/add"
                        android:onClick="addSlot"
                        android:textSize="25sp"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/light_blue" />



                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>