<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/gradient_green_blue"
    tools:context=".login">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30sp"
        app:cardElevation="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@color/my_background"
            android:padding="20sp">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOGIN"
                android:textColor="@color/dark_blue"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/et_phone_no"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingTop="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10sp"
                android:ems="15"
                android:textSize="18sp"
                android:hint="@string/enter_phone_number_login"
                android:textColorHint="@color/medium_gray"
                android:inputType="phone"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/et_password"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7sp"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10sp"
                android:ems="15"
                android:textSize="18sp"
                android:textColorHint="@color/medium_gray"
                android:hint="@string/hnt_enter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp"
                android:foregroundGravity="center_horizontal"
                android:onClick="login"
                android:text="@string/login"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/light_blue"
                 />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="true"
                android:linksClickable="true"
                android:onClick="goRegister"
                android:text="@string/register_text"
                android:textColor="@color/light_blue"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>